Force data reload with cache buster and window scope

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         src="https://dapi.kakao.com/v2/maps/sdk.js?appkey=a6b27b6dab16c7e3459bb9589bf1269d&libraries=services,clusterer,roadview"></script>
 
     <!-- Lotto Data -->
-    <script src="lotto_data.js"></script>
+    <script src="lotto_data.js?v=2.2" onerror="alert('데이터 파일 로드 중 에러가 발생했습니다.')"></script>
 
     <style>
         :root {
