--- a/index.html
+++ b/index.html
@@ -2215,7 +2215,7 @@
                 <div class="checkbox-group">
                     <label class="checkbox-item"><input type="checkbox" id="freq10" checked> 🚩 10회 이상</label>
                     <label class="checkbox-item"><input type="checkbox" id="freq5" checked> ⭐ 5~9회</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq3" checked> 🔴 3~4회</label>
+                    <label class="checkbox-item"><input type="checkbox" id="freq3" checked> 🟠 3~4회</label>
                     <label class="checkbox-item"><input type="checkbox" id="freq1" checked> 🔵 2회 이하</label>
                 </div>
             </div>
@@ -3861,40 +3861,25 @@
             Object.values(uniqueShops).forEach(shop => {
                 let markerImg = null;
                 // Tiered Styles
+                // Tiered Styles (SVG-based for reliability)
+                const SVG_LEGENDARY = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="%23d32f2f" d="M12.45 4L11 2H4v18h2v-7h5h1.55l1.45 2h7V4z"/></svg>';
+                const SVG_PREMIUM = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24"><path fill="%23fbc02d" d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"/></svg>';
+                const SVG_STABLE = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%23ff9800" stroke="white" stroke-width="2"/></svg>';
+                const SVG_ACTIVE = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%231976d2" stroke="white" stroke-width="2"/></svg>';
+                const SVG_CLOSED = 'data:image/svg+xml;charset=UTF-8,<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10" fill="%239e9e9e"/><path fill="white" d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/></svg>';
+
                 if (shop.totalWins >= 10) {
-                    // Legendary Red Flag
-                    markerImg = new kakao.maps.MarkerImage(
-                        'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png',
-                        new kakao.maps.Size(31, 35)
-                    );
+                    markerImg = new kakao.maps.MarkerImage(SVG_LEGENDARY, new kakao.maps.Size(32, 32));
                 } else if (shop.totalWins >= 5) {
-                    // Premium Gold Star
-                    markerImg = new kakao.maps.MarkerImage(
-                        'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png',
-                        new kakao.maps.Size(24, 35)
-                    );
+                    markerImg = new kakao.maps.MarkerImage(SVG_PREMIUM, new kakao.maps.Size(32, 32));
                 } else if (shop.totalWins >= 3) {
-                    // Stable Red Spot
-                    markerImg = new kakao.maps.MarkerImage(
-                        'https://t1.daumcdn.net/localimg/localimages/07/2018/pc/img/marker_spot.png',
-                        new kakao.maps.Size(24, 35),
-                        { offset: new kakao.maps.Point(12, 35) }
-                    );
+                    markerImg = new kakao.maps.MarkerImage(SVG_STABLE, new kakao.maps.Size(20, 20));
                 } else {
-                    // Active Blue Spot (Default)
-                    markerImg = new kakao.maps.MarkerImage(
-                        'https://t1.daumcdn.net/localimg/localimages/07/2018/pc/img/marker_aspt.png',
-                        new kakao.maps.Size(24, 35),
-                        { offset: new kakao.maps.Point(12, 35) }
-                    );
+                    markerImg = new kakao.maps.MarkerImage(SVG_ACTIVE, new kakao.maps.Size(20, 20));
                 }
 
-                // Closed Shop Override
                 if (shop.closed) {
-                    markerImg = new kakao.maps.MarkerImage(
-                        'https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/marker_red.png',
-                        new kakao.maps.Size(31, 35)
-                    );
+                    markerImg = new kakao.maps.MarkerImage(SVG_CLOSED, new kakao.maps.Size(24, 24));
                 }
 
                 const marker = new kakao.maps.Marker({
@@ -3923,7 +3908,7 @@
 
                 const content = `
                     <div class="infowindow">
-                        <div class="iw-title">${shop.n} ${shop.totalWins >= 10 ? '🚩' : (shop.totalWins >= 5 ? '⭐' : '')} ${shop.closed ? '<span style="font-size:12px; color:red;">(폐업)</span>' : ''}</div>
+                        <div class="iw-title">${shop.n} ${shop.totalWins >= 10 ? '🚩' : (shop.totalWins >= 5 ? '⭐' : (shop.totalWins >= 3 ? '🟠' : ''))} ${shop.closed ? '<span style="font-size:12px; color:red;">(폐업)</span>' : ''}</div>
                         <div class="iw-addr-box" onclick="copyToClipboard('${safeAddr}')" title="주소 복사하기">
                             <span class="iw-addr">${displayAddr}</span>
                             <svg width="14" height="14" viewBox="0 0 24 24" fill="#666"><path d="M16 1H4c-1.11 0-2 .9-2 3h12 c-1.1 0-2 .9-2 2v14c0 1.1.9 2 1 0 2-.9 2-2V7c0-1.1-.9-2-2-2zm0 16H8V7h11v14z"/></svg>
