Fix Roadview failure and finalize 4-tier visualization

--- a/index.html
+++ b/index.html
@@ -5251,6 +5251,9 @@
             const copyBtn = document.getElementById('roadviewCopyBtn');
             const naviBtn = document.getElementById('roadviewNaviBtn');
 
+            // Show modal immediately
+            roadviewContainer.style.display = 'flex';
+
             let lat, lng, shopName, address, actionType, actionData, shop;
 
             // Handle Overloaded Arguments
