Refine filter UI: sync labels and layout as requested

--- a/index.html
+++ b/index.html
@@ -2213,10 +2213,12 @@
             <div class="section">
                 <span class="section-title">🏆 당첨 횟수 필터 (Frequency)</span>
                 <div class="checkbox-group">
-                    <label class="checkbox-item"><input type="checkbox" id="freq10" checked> 🚩 10회 이상</label>
+                    <label class="checkbox-item"><input type="checkbox" id="freq10" checked> 🚩 10회 이상(전국 1%)</label>
                     <label class="checkbox-item"><input type="checkbox" id="freq5" checked> ⭐ 5~9회</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq3" checked> 🟠 3~4회</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq1" checked> 🔵 2회 이하</label>
+                    <div style="display: flex; gap: 10px; width: 100%;">
+                        <label class="checkbox-item"><input type="checkbox" id="freq3" checked> 🟠 3~4회</label>
+                        <label class="checkbox-item"><input type="checkbox" id="freq1" checked> 🔵 2회 이하</label>
+                    </div>
                 </div>
             </div>
             <div class="section">
