--- a/index.html
+++ b/index.html
@@ -2215,10 +2215,14 @@
             <div class="section">
                 <span class="section-title">🏆 당첨 횟수 필터 (Frequency)</span>
                 <div class="checkbox-group" style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-                    <label class="checkbox-item"><input type="checkbox" id="freq10" checked> 🚩 10회 이상(전국 1%)</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq5" checked> ⭐ 5~9회</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq3" checked> 🟠 3~4회</label>
-                    <label class="checkbox-item"><input type="checkbox" id="freq1" checked> 🔵 2회 이하</label>
+                    <label class="checkbox-item" style="white-space: nowrap;"><input type="checkbox" id="freq10"
+                            checked> 🚩 10회이상(전국1%)</label>
+                    <label class="checkbox-item" style="white-space: nowrap;"><input type="checkbox" id="freq5" checked>
+                        ⭐ 5~9회</label>
+                    <label class="checkbox-item" style="white-space: nowrap;"><input type="checkbox" id="freq3" checked>
+                        🟠 3~4회</label>
+                    <label class="checkbox-item" style="white-space: nowrap;"><input type="checkbox" id="freq1" checked>
+                        🔵 2회 이하</label>
                 </div>
             </div>
             <div class="section">
