UI: Add mobile-only 5px extra spacing (total 15px) between round label and balls

--- a/index.html
+++ b/index.html
@@ -1408,6 +1408,10 @@
                     padding: 12px !important;
                 }
 
+                .recent-round-num {
+                    margin-right: 15px !important;
+                }
+
                 .modal-content {
                     width: 95% !important;
                     max-width: 95% !important;
