Fix: Ensure copy notification visibility on mobile (position: fixed, higher z-index)

--- a/index.html
+++ b/index.html
@@ -973,11 +973,11 @@
 
         /* Toast Notification Styles */
         #toast-container {
-            position: absolute;
+            position: fixed;
             bottom: 30px;
             left: 50%;
             transform: translateX(-50%);
-            z-index: 2000;
+            z-index: 10001;
             display: flex;
             flex-direction: column;
             gap: 10px;
