--- a/index.html
+++ b/index.html
@@ -974,7 +974,7 @@
         /* Toast Notification Styles */
         #toast-container {
             position: fixed;
-            bottom: 30px;
+            top: 20px;
             left: 50%;
             transform: translateX(-50%);
             z-index: 10001;
