--- a/index.html
+++ b/index.html
@@ -974,10 +974,11 @@
         /* Toast Notification Styles */
         #toast-container {
             position: fixed;
-            top: 20px;
+            top: 60px;
+            /* Below iPhone notch/status bar */
             left: 50%;
             transform: translateX(-50%);
-            z-index: 10001;
+            z-index: 99999;
             display: flex;
             flex-direction: column;
             gap: 10px;
@@ -5099,15 +5100,35 @@
         }
 
         function copyToClipboard(text) {
+            // Priority: navigator.clipboard API (modern browsers, iOS support)
+            if (navigator.clipboard && window.isSecureContext) {
+                navigator.clipboard.writeText(text).then(() => {
+                    showToast("복사완료", "success");
+                }).catch(err => {
+                    console.error('Clipboard API Error:', err);
+                    fallbackCopyTextToClipboard(text);
+                });
+            } else {
+                fallbackCopyTextToClipboard(text);
+            }
+        }
+
+        // Fallback for older browsers
+        function fallbackCopyTextToClipboard(text) {
             const textarea = document.createElement('textarea');
             textarea.value = text;
+            textarea.style.position = 'fixed'; // Prevent scrolling to bottom
+            textarea.style.left = '-9999px';
+            textarea.style.top = '0';
             document.body.appendChild(textarea);
+            textarea.focus();
             textarea.select();
             try {
-                document.execCommand('copy');
-                showToast("복사완료", "success");
+                const successful = document.execCommand('copy');
+                if (successful) showToast("복사완료", "success");
+                else showToast("복사 실패", "error");
             } catch (err) {
-                showToast("복사 실패", "error");
+                showToast("복사 오류", "error");
             }
             document.body.removeChild(textarea);
         }
