UI: Adjust toast notification position to top: 80px for iPhone 15 optimization

--- a/index.html
+++ b/index.html
@@ -974,8 +974,8 @@
         /* Toast Notification Styles */
         #toast-container {
             position: fixed;
-            top: 60px;
-            /* Below iPhone notch/status bar */
+            top: 80px;
+            /* Better avoidance for iPhone 15 Dynamic Island/Status Bar */
             left: 50%;
             transform: translateX(-50%);
             z-index: 99999;
